token param is added to change-password route in docs
